--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,23 @@
 	
   </dependencies>
   
-  <build>
-  <plugins>
-      <plugin>
+<profiles>
+  <profile>
+    <id>doclint-java8-disable</id>
+    <activation>
+      <jdk>[1.8,)</jdk>
+    </activation>
+
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+   			 <configuration>
+                    <doclint>none</doclint>
+             </configuration>
+        </plugin>
+              <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
@@ -54,7 +68,9 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
-</plugins>
-</build>
- 
+      </plugins>
+    </build>
+  </profile>
+</profiles>
+
 </project>
